--- a/src/css/variables/_colors.scss
+++ b/src/css/variables/_colors.scss
@@ -3,10 +3,13 @@
 
   --white: #fff;
   --black: #000;
+  --black2: #2A2F33;
+  --black3: #2B2928;
 
   --blue: #057FD1;
   --blue2: #F2F8FD;
 
   --grey: #BBBBBB;
   --grey2: #E1E1E1;
+  --grey3: #d5d5d5;
 }
