--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,6 +12,7 @@
 @import 'components/loader';
 @import 'components/banner';
 @import 'components/pageHeader';
+@import 'components/catalog';
 @import 'components/our_premises';
 @import 'components/form.scss';
 
