Coding single trip

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -39,8 +39,8 @@
 @import './views/about_us/about_us';
 @import './views/about_us/rwd_about_us';
 
-@import './views/products/products';
-@import './views/products/rwd_products';
+@import './views/trip/trip';
+@import './views/trip/rwd_trip';
 
 @import './views/gallery/gallery';
 @import './views/gallery/rwd_gallery';
