--- a/src/css/components/_banner.scss
+++ b/src/css/components/_banner.scss
@@ -7,13 +7,36 @@
   width: 160rem;
   margin: 0 auto;
   padding: 7.5rem 2rem 5.4rem;
+
+  position: relative;
+    &--img{
+      width: 100%;
+      height: 100%;
+      opacity: .3;
+      border-radius: 1rem;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 1rem;
+        }
+    }
     &--title{
       line-height: 6rem;
       text-align: center;
+      position: relative;
+      z-index: 1;
     }
     .btn-1{
       background-color: var(--pcolor);
       margin-top: 2.8rem;
+      position: relative;
+      z-index: 1;
     }
 }
 
