--- a/src/css/views/trip/_trip.scss
+++ b/src/css/views/trip/_trip.scss
@@ -3,16 +3,87 @@
   margin: 2.5rem auto 17.6rem;
 
   display: flex;
+  align-items: flex-start;
   gap: 3.8rem;
 
   position: relative;
     &__gallery{
       width: 76.1rem;
-      height: 62rem;
-      background-color: pink;
 
       position: sticky;
       top: 2.5rem;
+        .productGallery-top{
+              width: 100%;
+              height: 50rem;
+              border-radius: 1.6rem;
+                .swiper-slide{
+                  @include center;
+
+                  width: 100%;
+                  height: 100%;
+
+                  cursor: pointer;
+                    img{
+                      width: 100%;
+                      max-height: 100%;
+                      object-fit: contain
+                    }
+                }
+            }
+
+            .productGallery-bottom{
+              width: 100%;
+              height: 10.5rem;
+
+              margin-top: 1.5rem;
+              .swiper-wrapper{
+                gap: 2.5rem !important;
+              }
+                .swiper-slide{
+                  // width: 22.8% !important;
+                  border-radius: 1rem;
+                  height: 100%;
+
+                  cursor: pointer;
+
+
+                  margin-right: 0 !important;
+                }
+                .swiper-slide-inner{
+                  width: 100%;
+                  height: 100%;
+                  border-radius: 1rem;
+                  border: 0.1rem solid #f6f6f9;
+
+                  background-repeat: no-repeat;
+                  background-size: cover;
+                  background-position: 50% 0;
+                }
+                .swiper-slide-thumb-active{
+                  position: relative;
+                    div{
+                      opacity: 0.48;
+                      transition: all .2s ease;
+                    }
+                    &::before{
+                      content: '';
+                      width: 3.8rem;
+                      height: 3.8rem;
+                      
+                      transition: 2s;
+                      background-size: contain;
+                      background-position: center;
+                      background-image: url('../../assets/checked.svg');
+                      
+                      position: absolute;
+                      inset: 0;
+                      margin: auto;
+                      z-index: 1;
+
+                      opacity: 1;
+                    }
+                }
+            }
     }
 
     &__content{
@@ -120,3 +191,142 @@
         }
     }
 }
+
+
+.reviews{
+    &__addNew{
+      @include center; 
+      flex-direction: column;
+      padding: 6.1rem 2rem 7.9rem;
+      background-color: var(--white);
+        &--title, &--text{
+          text-align: center;
+        }
+        &--title{
+          color: var(--black);
+        }
+        &--text{
+          margin-top: 3.6rem;
+          margin-bottom: 4.6rem;
+        }
+        .reviews-area{
+          width: 64rem;
+            .review-rating{
+              @include verticalCenter;
+              margin-bottom: 4.8rem !important;
+                label{
+                  margin-right: 2.6rem;
+                }
+            }
+            label{
+              display: none !important; 
+              min-width: unset !important;
+            }
+            textarea, input[type="text"]{
+              width: 100% !important;
+              max-width: 100% !important;
+              border-radius: 1rem !important;
+              border: .1rem solid var(--blue2) !important;
+              resize: none;
+
+              font-size: 1.2rem !important;
+              color: var(--black) !important;
+              padding: 3rem 4.1rem !important;
+                &::placeholder{
+                  font-size: 1.2rem !important;
+                  color: var(--black) !important;
+                }
+            }
+
+            .rating-label{
+              display: flex !important;
+            }
+
+            form{
+              & >p{
+                margin-bottom: 1rem !important;
+                  &:last-child{
+                    margin-bottom: 0 !important; 
+                  }
+              }
+
+              .form-submit{
+                @include flexLine('center');
+                margin-top: 1.1rem;
+                  #submit{
+                    padding: 2rem 2.4rem;
+                    background-color: var(--pcolor);
+                    color: var(--white);
+                    border-radius: 8rem;
+                    font-size: 1.3rem;
+                    text-transform: uppercase;
+
+                    margin-left: auto;
+                  }
+              }
+
+            }
+
+            .comment-reply-title, .comment-form-title, .comment-notes{
+              display: none !important;
+            }
+
+            .rating-label{
+              font-size: 1.2rem;
+              color: var(--black);
+            }
+            .review-rating > span{
+              color: #FFC107;
+              font-size: 3.5rem !important;
+              width: auto !important;
+              height: auto !important;
+
+              position: relative;
+              top: -0.7rem;
+            }
+
+            .logged-in-as{
+              font-size: 1.4rem;
+              font-weight: 700;
+                a{
+                  &:last-child{
+                    color: var(--pcolor);
+                    text-decoration: underline;
+                  }
+                }
+            }
+        }
+    }
+
+    &__list{
+      padding: 7.8rem 0;
+      background-color: var(--blue2);
+        &__header, &__slider{
+          width: 160rem;
+          margin: 0 auto;
+        }
+
+        &__header{
+          margin-bottom: 5.1rem;
+            h2, p{
+              color: var(--black);
+            }
+            p{
+              margin-top: 1.9rem;
+            }
+        }
+
+
+        &__slider{
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 5rem;
+
+          align-items: flex-start
+        }
+    }
+}
+
+
+
+
