--- a/templates/partial/pagination.twig
+++ b/templates/partial/pagination.twig
@@ -1,21 +1,21 @@
 {% if posts.pagination.pages is not empty %}
-  <nav class="pagination-block">
+  <nav class="pagination">
     {# First #}
-    {% if posts.pagination.pages|first and posts.pagination.pages|first.current != true %}
+    {# {% if posts.pagination.pages|first and posts.pagination.pages|first.current != true %}
       <a class="first btn" href="{{ posts.pagination.pages|first.link }}">First</a>
     {% else %}
         <button class="first btn disabled" disabled>First</button>
-    {% endif %}
+    {% endif %} #}
 
     {# Previous #}
-    {% if posts.pagination.prev %}
+    {# {% if posts.pagination.prev %}
       <a class="prev btn" href="{{ posts.pagination.prev.link }}">{{fn('the_svg', 'leftArrow')}}</a>
     {% else %}
       <button class="prev btn disabled" disabled>{{fn('the_svg', 'leftArrow')}}</button>
-    {% endif %}
+    {% endif %} #}
 
 
-    <ul class="pagination">
+    <ul class="pagination__list">
       {# Pages #}
       {% for page in posts.pagination.pages %}
         {% if page.link %}
@@ -31,17 +31,17 @@
     </ul>
 
     {# Next #}
-    {% if posts.pagination.next %}
+    {# {% if posts.pagination.next %}
         <a class="next btn" href="{{ posts.pagination.next.link }}">{{fn('the_svg', 'leftArrow')}}</a>
     {% else %}
         <button class="next btn disabled" disabled>{{fn('the_svg', 'leftArrow')}}</button>
-    {% endif %}
+    {% endif %} #}
 
     {# Last #}
-    {% if posts.pagination.pages|last and posts.pagination.pages|last.current != true %}
+    {# {% if posts.pagination.pages|last and posts.pagination.pages|last.current != true %}
         <a class="last btn" href="{{ posts.pagination.pages|last.link }}">Last</a>
     {% else %}
         <button class="last btn disabled" disabled>Last</button>
-    {% endif %}
+    {% endif %} #}
     </nav>
 {% endif %}
