--- a/templates/views/5_pages/homepage.twig
+++ b/templates/views/5_pages/homepage.twig
@@ -3,129 +3,50 @@
 
 
 <section class="s1_homepage">
-  <div class="s1_homepage__slider swiper-container">
-    <div class="swiper-wrapper">
-      {% for single in field.s1_repeat %}
-        {% for banner in field.s1_repeat %}
-          {% if banner.acf_fc_layout  == 'banner_1' %}
-            <div class="s1_homepage__banner banner_1 swiper-slide">
-              <div class="s1_homepage__banner__content">
-                <h1 class="s1_homepage__banner__content--title tit-35">{{banner.title}}</h1>
-                <img class="s1_homepage__banner__content--img" src="{{banner.logo.url}}" alt="{{banner.logo.alt}}">
-                <p class="s1_homepage__banner__content--text txt-20">{{banner.text}}</p>
+  <img class="s1_homepage--img" src="{{acf.s1_img.url}}" alt="{{acf.s1_img.alt}}">
 
-                <div class="s1_homepage__banner__content__buttons">
-                  {% if banner.button_1 %}
-                    <a class="btn-1" target="{{ banner.button_1.target}}" href="{{ banner.button_1.url}}">
-                      <span class="btn-1--text">{{ banner.button_1.title}}</span>
-                      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-                    </a> 
-                  {% endif %}
+  <div class="s1_homepage__content">
+    <h1 class="s1_homepage__content--title tit-70">{{acf.s1_title}}</h1>
 
-                  {% if  banner.button_2 %}
-                    <a class="btn-1" target="{{ banner.button_2.target}}" href="{{ banner.button_2.url}}">
-                      <span class="btn-1--text">{{ banner.button_2.title}}</span>
-                      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-                    </a> 
-                  {% endif %}
-                </div>
-              </div>
-
-              <img class="s1_homepage__banner--img" src="{{banner.img.url}}" alt="{{banner.img.alt}}">
-            </div>
-          {% elseif banner.acf_fc_layout == 'banner_2' %}
-            <div class="s1_homepage__banner banner_2 swiper-slide">
-              <div class="s1_homepage__banner__content">
-                <h1 class="s1_homepage__banner__content--title tit-35">{{banner.title}}</h1>
-                <img class="s1_homepage__banner__content--img" src="{{banner.logo.url}}" alt="{{banner.logo.alt}}">
-                <p class="s1_homepage__banner__content--text txt-20">{{banner.text}}</p>
-
-                <div class="s1_homepage__banner__content__buttons">
-                  {% if banner.button_1 %}
-                    <a class="btn-1" target="{{ banner.button_1.target}}" href="{{ banner.button_1.url}}">
-                      <span class="btn-1--text">{{ banner.button_1.title}}</span>
-                      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-                    </a> 
-                  {% endif %}
-
-                  {% if  banner.button_2 %}
-                    <a class="btn-1" target="{{ banner.button_2.target}}" href="{{ banner.button_2.url}}">
-                      <span class="btn-1--text">{{ banner.button_2.title}}</span>
-                      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-                    </a> 
-                  {% endif %}
-                </div>          
-              </div>
-
-            {{fn('getVideo', banner.video)}}
-            </div>
-          {% else %}
-            <div class="s1_homepage__banner videoBanner swiper-slide">
-              {{fn('getVideo', banner.video)}}
-            </div>
-          {% endif %}
-        {% endfor %}
-      {% endfor %}
-    </div>
-  </div>
-
-  <div class="s1_homepage__controls">
-    <button class="next btn-1">
-      <span class="btn-1--text">następny</span>
-      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-    </button>
-    <button class="prev btn-1">
-      <span class="btn-1--text">poprzedni</span>
-      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-    </button>
+    {% if acf.s1_button %}
+      <a class="btn-1" target="{{acf.s1_button.target}}" href="{{acf.s1_button.url}}">
+        <span class="btn-1--text">{{acf.s1_button.title}}</span>
+      </a> 
+    {% endif %}
   </div>
 </section>
 
 
 <section class="s2_homepage">
   <header class="s2_homepage__header">
-    <h2 class="s2_homepage__header--title tit-100">{{field.s2_title}}</h2>
+    <h2 class="s2_homepage__header--title tit-50">{{acf.s2_title}}</h2>
   </header>
   
 
   <div class="s2_homepage__grid">
-    <a href="#" class="s2_homepage__grid__single">
-      <img class="s2_homepage__grid__single--img" src="http://localhost/sushi/wp-content/uploads/2021/11/rolki-special-147.png" alt="">
-      <h3 class="s2_homepage__grid__single--title tit-25">Tempura roll</h3>
-    </a>
-  </div>  
+    {% for post in posts %}
+      <div class="single_trip_ver">
+        <h2 class="single_trip_ver--title">{{post.post_title}}</h2>
+        <p class="single_trip_ver--text txt-14">{{post.text}}</p>
 
-
-  <div class="s2_homepage__bottom">
-    {% if field.s2_button %}
-      <div class="s2_homepage__bottom__button">
-        <a class="btn-1" target="{{field.s2_button.target}}" href="{{field.s2_button.url}}">
-          <span class="btn-1--text">{{field.s2_button.title}}</span>
-          <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-        </a> 
+        <img class="single_trip_ver--img" src="{{get_the_post_thumbnail_url(post.ID)}}" alt="{{post.post_title}}">
       </div>
-    {% endif %}
+    {% endfor %}
   </div>
+
 </section>
 
 
-<section class="s3_homepage">
-  <img class="s3_homepage--img" src="{{field.s3_img.url}}" alt="{{field.s3_img.alt}}">
+{% include "/templates/partial/banner.twig" with {'img': acf.s3_img, 'title': acf.s3_title, 'button': acf.s3_button} %}
+{% include "/templates/partial/catalog.twig" with {'img': acf.s4_img, 'title': acf.s4_title, 'text': acf.s4_text, 'button': acf.s4_button} %}
 
-  <div class="s3_homepage__content">
-    <h2 class="s3_homepage__content--title tit-35">{{field.s3_title}}</h2>
-    <p class="s3_homepage__content--text txt-20">{{field.s3_text}}</p>
 
-    <a class="btn-1" target="{{field.s3_button.target}}" href="{{field.s3_button.url}}">
-      <span class="btn-1--text">{{field.s3_button.title}}</span>
-      <img class="btn-1--icon" src="{{asset('arrow.svg')}}" alt="arrow">
-    </a> 
-  </div>
-</section>
+{% if opinions %}
+  {% include "/templates/partial/opinions.twig" with {'opinions': opinions} %}
+{% endif %}
 
 
 
-{% include "/templates/partial/our_premises.twig" %}
 {% endblock %}
 
 
